k8s/contabo/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: partiumenu
